# BSM_Soliton

./: .gitignore  CMakeLists.txt  README.md  cxSM_Scan.cpp
MMANotebooks/: CMMonopole.nb  CMMonopoleUV.nb  THDM_CMM.nb
include/: Basic_Model.h  CMMonopoleSolver.h  CMMonopoleSolverUVReg.h  Constants.h  CubicSolver.h  DWSolver.h  GSL_Wraper.h  Kink1D.h  ODE.h  PathDeformation.h  Potential.h  QuarticSolver.h  Relaxation.h  RungeKutta.h  SM.h  SM_cxSM.h  SolitonSolver.h  THDM_CMMonopoleSolver.h  THDM_CMMonopoleSolverUVReg.h  THDM_CPC.h  THDM_SCPV1.h  ToyA4.h  ToyD4.h  ToyZ3.h  ToyZ4.h  ToyZ5.h  VTypes.h  cxSM_CP.h  cxSM_CP_reduced.h  cxSM_CP_reduced_a1.h  cxSM_Z2.h  cxSM_Z2_biased.h
include/obsolete/: SM_cxSM.h
models/ToyKink/: ToyKink.cpp
models/ToyZ4/: ToyZ4.cpp  ToyZ4.h
models/ToyZ4_Alte/: ToyZ4.cpp  ToyZ4.h  ToyZ4_Benchmark.cpp  ToyZ4_Scan.cpp
models/ToyZ6/: ToyZ6.cpp  ToyZ6.h  ToyZ6_Scan.cpp
scanner/: THDM_SCPV_Scan.cpp  cxSM_CP_reduced_Scan.cpp  cxSM_CP_reduced_Scan_param_only.cpp  cxSM_CP_reduced_Scan_param_only_cons.cpp  cxSM_CP_reduced_a1_Scan_cons.cpp  cxSM_CP_reduced_a1_Scan_cons_fix_m2.cpp  cxSM_Z2_Biased_Scan.cpp  cxSM_Z2_Scan.cpp
src/: Basic_Model.cpp  CMMonopoleSolver.cpp  CMMonopoleSolverUVReg.cpp  CubicSolver.cpp  DWSolver.cpp  GSL_Wraper.cpp  Kink1D.cpp  PathDeformation.cpp  Potential.cpp  QuarticSolver.cpp  Relaxation.cpp  RungeKutta.cpp  SM.cpp  SM_cxSM.cpp  SolitonSolver.cpp  THDM_CMMonopoleSolver.cpp  THDM_CMMonopoleSolverUVReg.cpp  THDM_CPC.cpp  THDM_SCPV1.cpp  ToyA4.cpp  ToyD4.cpp  ToyZ3.cpp  ToyZ4.cpp  ToyZ5.cpp  VTypes.cpp  cxSM_CP.cpp  cxSM_CP_reduced.cpp  cxSM_CP_reduced_a1.cpp  cxSM_Z2.cpp  cxSM_Z2_biased.cpp
src/obsolete/: SM_cxSM.cpp
test/: CMMonopoleUV_test.cpp  CMMonopole_test.cpp  CMakeLists.txt  DeformationDW_THDM_SCPV.cpp  DeformationDW_ToyA4.cpp  DeformationDW_ToyD4.cpp  DeformationDW_ToyZ3_Scan.cpp  DeformationDW_ToyZ4_Scan.cpp  DeformationDW_ToyZ4_Test.cpp  DeformationDW_ToyZ5_Scan.cpp  DeformationDW_cxSMCP_reduced.cpp  DeformationDW_cxSMCP_reduced_a1.cpp  DeformationDW_template.cpp  Kink1D_test.cpp  KinknD_test.cpp  NOVortex_RK_Test.cpp  NOVortex_Test.cpp  Reduce_to_Zero_test.cpp  RelaxationCPDW.cpp  RelaxationDW.cpp  RelaxationDW_ToyZ4_Scan.cpp  RelaxationDW_cxSMCP_reduced.cpp  RelaxationDW_cxSMZ2.cpp  RelaxationDW_cxSMZ2_biased.cpp  RelaxationTest.cpp  RelaxationVortex.cpp  RelaxationVortex_theta.cpp  RungeKutta_Test.cpp  Shooting_Test.cpp  Spline_Inter_Potential_memtest.cpp  Spline_Inter_Potential_test.cpp  THDMCMMUV_test.cpp  THDMCMM_test.cpp  cxSM_CP_LocalMinimaTest.cpp  cxSM_CP_reduced_a1_test.cpp  cxSM_LocalMinimaTest.cpp  cxSM_SolitonShooting.cpp  cxSM_SolitonTest.cpp  cxSM_SolitonToyTest.cpp  cxSM_Z2_LocalMinimaTest.cpp  (+1 more)
test/obsolete/: CMMonopoleUV_test.cpp  DeformationDW_ToyA4_Scan.cpp  DeformationDW_ToyZ3_Scan.cpp  DeformationDW_cxSMCP_reduced_a1.cpp  Kink1D_memtest.cpp  KinknD_memtest.cpp  QuarticSolver_test.cpp  RelaxationDW_ToyA4.cpp  RelaxationDW_ToyZ3.cpp  RelaxationDW_cxSMZ2.cpp  RelaxationTest.cpp  RelaxationVortex.cpp  RungeKutta_Test.cpp  Shooting_Test.cpp  Spline_Inter_memtest.cpp  THDM_SCPV_LocalMinimaTest.cpp  cxSM_CP_LocalMinimaTest.cpp  cxSM_CP_reduced_test.cpp
